# rust-hwid

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: get_hwid.rs  get_id.rs
src/: bsd.rs  darwin.rs  lib.rs  linux.rs  win32.rs
src/bindings/: bsd.rs  darwin.rs  linux.rs  win32.rs
