[package]
name = "hwid"
version = "0.1.0"
authors = ["S Stewart <iamtheworst@programmer.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.6"

[lib]
name = "hwid"
path = "src/lib.rs"

[[bin]]
name = "hwid-example"
path = "examples/get_hwid.rs"