[package]
name = "hardware-id"
version = "0.3.0"
description = "Access Hardware ID information on Windows, macOS and Linux platforms"
repository = "https://github.com/tilda/rust-hwid"
keywords = ["windows", "macos", "linux"]
categories = ["os"]
authors = ["tilda <tda@stairway.cf>"]
edition = "2021"
license = "MIT"

# https://stackoverflow.com/a/51821632/364875
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"

[dependencies]
thiserror = "1.0.31"

[[example]]
name = "get_hwid"
crate-type = ["bin"]